# rust-nightly-commit-hash-checker

./: Cargo.toml  README.md
src/: main.rs
