[package]
name = "rust-nightly-commit-hash-checker"
version = "0.1.0"
authors = ["张卓 <mycinbrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
toml = "0.5.6"
dotenv = "0.15.0"
anyhow = "1.0.26"
serde_json = "1.0.44"
handlebars = "2.0.4"
